--- a/gui.fxml
+++ b/gui.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.CheckBox?>
@@ -221,6 +222,9 @@
          <buttons>
             <Button fx:id="btnStart" mnemonicParsing="false" onAction="#btnStartPressed" prefHeight="25.0" prefWidth="65.0" text="Start" />
          </buttons>
+         <padding>
+            <Insets right="10.0" />
+         </padding>
       </ButtonBar>
    </bottom>
 </BorderPane>
