--- a/gui.fxml
+++ b/gui.fxml
@@ -217,7 +217,7 @@
                               <Tooltip text="Requires 70 Prayer and 70 Defence" />
                            </tooltip>
                         </CheckBox>
-                        <Text fx:id="txtMouseSpeed1" layoutX="167.0" layoutY="35.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0" />
+                        <Text fx:id="txtMouseSpeed" layoutX="167.0" layoutY="35.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0" />
                      </children>
                   </AnchorPane>
                </content>
