--- a/gui.fxml
+++ b/gui.fxml
@@ -220,12 +220,12 @@
                         <Text fx:id="txtMouseSpeed" layoutX="167.0" layoutY="35.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0" />
                         <CheckBox fx:id="checkAutoRetaliate" layoutX="14.0" layoutY="82.0" mnemonicParsing="false" text="Use auto-retaliate">
                            <tooltip>
-                              <Tooltip text="Requires 70 Prayer and 70 Defence" />
+                              <Tooltip text="Recommended" />
                            </tooltip>
                         </CheckBox>
                         <CheckBox fx:id="checkCrush" layoutX="14.0" layoutY="113.0" mnemonicParsing="false" text="Set crush attack style">
                            <tooltip>
-                              <Tooltip text="Requires 70 Prayer and 70 Defence" />
+                              <Tooltip text="Not pure friendly!" />
                            </tooltip>
                         </CheckBox>
                      </children>
