--- a/scripts/resources/gui/gui.fxml
+++ b/scripts/resources/gui/gui.fxml
@@ -162,6 +162,11 @@
                               <Tooltip text="Not pure friendly!" />
                            </tooltip>
                         </CheckBox>
+                        <CheckBox fx:id="checkDisableAutoRetaliateForMinions" layoutX="14.0" layoutY="143.0" mnemonicParsing="false" text="Disable autoretaliate for minions">
+                           <tooltip>
+                              <Tooltip text="Will disable autoretaliate if Sarachnis spawns his minions" />
+                           </tooltip>
+                        </CheckBox>
                      </children>
                   </AnchorPane>
                </content>
